사이드바 변경사항 수정1

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
 .post-title {
     color: rgb(15, 15, 15);
     font-size: 20px;
+    margin-bottom: 5px;
 }
 
 .lost-info > p {
@@ -50,6 +51,7 @@ main {
     display: flex;
     gap: 42px;
     margin-top: 37px;
+    justify-content: center;
 }
 
 .filter {
@@ -70,12 +72,62 @@ main {
 
 .filter-section {
     width: auto;
-    height: 100px;
-    border: 1px solid black;
+    height: 80px;
 }
 
 .category-title {
     font-size: 26px;
     font-weight: 600;
     color: rgb(60, 113, 205);
+    margin-bottom: 5px;
+}
+
+.category-description {
+    font-size: 16px;
+    color: rgb(128, 128, 128);
+}
+
+.filter-title {
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(15, 15, 15);
+}
+
+.inputbutton-frame {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.filter-input {
+    height: 43px;
+    width: 184px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #C0C0C0;;
+}
+
+input {
+    font-size: 16px;
+    border: 0px;
+    border: none;
+    outline: none;
+    background: transparent;
+    border-style: hidden;
+}
+
+.filter-searchbutton {
+    background-color: white;
+    border: 1px solid #C0C0C0;
+    border-radius: 10px;
+    width: 57px;
+    height: 36px;
+}
+input[type='date']::before {
+    content: attr(data-placeholder);
+    width: 100%;
+}
+
+input[type='date']:valid::before {
+    display: none;
 }
