폰트 오류 수정

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'Esamanru';
-    src: url('./font/esamanru-bold.otf') format('opentype');
+    src: url('../font/esamanru-bold.otf') format('opentype');
     font-weight: bold;
 }
 
