--- a/css/found.css
+++ b/css/found.css
@@ -8,6 +8,86 @@
 	src: url('../../../packages/pretendard/dist/web/variable/woff2/PretendardVariable.woff2') format('woff2-variations');
 }
 
+/* -------------header------------- */
+header {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100px;
+    background-color: white;
+    padding: 0 20px;
+}
+
+/* 로고 이미지 */
+.logo {
+    height: 90px;
+}
+
+/* 메뉴 */
+.nav ul {
+    display: flex;
+    list-style: none;
+    gap: 100px;
+}
+
+.nav a {
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    font-size: 1.5rem;
+    transition: color 0.3s ease;
+}
+
+.nav a:hover {
+    color: #3F48AE;
+}
+
+/* 해더 버튼 */
+.header-btn {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    gap: 10px;
+}
+
+.mypage, .register {
+    width: 103px;
+    height: 41px;
+    border: none;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.mypage {
+    border: solid 1px #808080;
+    color: #1A1E47;
+    background-color: white;
+}
+
+.mypage:hover {
+    background-color: #f0f0f0;
+}
+
+.register {
+    color: white;
+    background-color: #1A1E47;
+}
+
+.register:hover {
+    background-color: #2e368c;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+/* -------------header------------- */
 
 .post-card {
     width: 237px;
