--- a/css/intro.css
+++ b/css/intro.css
@@ -101,3 +101,39 @@ header {
     width: 100%;
 }
 
+.intro-over {
+    position: absolute;
+    top: 50%;
+    left: 10%; /* 왼쪽 여백 조절 */
+    transform: translateY(-50%); /* 수직 가운데 정렬 */
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+
+.intro-lar-texts {
+    font-family: 'GongGothicMedium', sans-serif;
+    font-size: 2.25rem;
+    font-weight: 700;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
+    line-height: 50px;
+}
+
+.intro-small-texts {
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+    max-width: 500px;
+    line-height: 120px;
+}
+
+.intro-small-texts img {
+    height: 1em;
+    vertical-align: text-top;
+    margin: 0 4px;
+}
+
+.intro-small-text1 {
+    white-space: nowrap;
+}
