--- a/css/intro.css
+++ b/css/intro.css
@@ -104,8 +104,8 @@ header {
 .intro-over {
     position: absolute;
     top: 50%;
-    left: 10%; /* 왼쪽 여백 조절 */
-    transform: translateY(-50%); /* 수직 가운데 정렬 */
+    left: 10%;
+    transform: translateY(-45%);
     display: flex;
     flex-direction: column;
     color: white;
@@ -136,4 +136,23 @@ header {
 
 .intro-small-text1 {
     white-space: nowrap;
+}
+/* -------------main section 1------------- */
+
+/* -------------main section 2------------- */
+.servise-introduce-area {
+    width: 100%;
+    height: 80px;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 70px;
+    font-weight: 500;
+}
+
+.divider {
+    width: 100%;
+    height: 1px;
+    background-color: #C0C0C0;
 }
