--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+    overflow-x: hidden;
 }
 
 /* -------------header------------- */
@@ -43,7 +44,7 @@ header {
 
 .nav a {
     text-decoration: none;
-    color: black;
+    color: #0F0F0F;
     font-weight: 500;
     font-size: 1.5rem;
     transition: color 0.3s ease;
@@ -152,7 +153,6 @@ header {
 
 /* -------------main section 2------------- */
 
-
 .latest-item-text-area {
     width: 100%;
     height: 80px;
@@ -162,10 +162,76 @@ header {
     justify-content: center;
     margin-left: 70px;
     font-weight: 500;
+    color: #0F0F0F;
 }
 
 .divider {
     width: 100%;
     height: 1px;
     background-color: #C0C0C0;
+    margin-bottom: 40px;
+}
+
+.main {
+    display: flex;
+}
+
+
+/* 카드 섹션 */
+.card-container {
+    max-width: 1185px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: minmax(100px, auto);
+    gap: 16px 18px;
+    margin: 0 120px;
+}
+
+.post-card {
+    width: 237px;
+    height: 271px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.card-imgbox {
+    width: 206px;
+    height: 160px;
+    margin-top: 15px;
+}
+
+.card-img {
+    border-radius: 5px;
+}
+
+.card-textbox {
+    width: 206px;
+    height: 42px;
+    display: flex;
+    margin-top: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0px;
+}
+
+.lost-info {
+    
+    display: flex;
+    gap: 4px;
+    align-items: center;
+}
+
+.post-title {
+    color: rgb(15, 15, 15);
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.lost-info > p {
+    color: rgb(128, 128, 128);
+    font-size: 12px;
+    margin: 0px;
 }
