style : 해더 폰트 및 색상 변경

--- a/css/find.css
+++ b/css/find.css
@@ -8,6 +8,10 @@
 	src: url('../../../packages/pretendard/dist/web/variable/woff2/PretendardVariable.woff2') format('woff2-variations');
 }
 
+body {
+    font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+}
+
 /* -------------header------------- */
 header {
     display: flex;
