feat : 아이디 설정 회원가입  minjun

--- a/css/signupID.css
+++ b/css/signupID.css
@@ -42,7 +42,7 @@ div {
     color: #666;
     font-size: 14px;
   }
-  .dot .seconddot {
+  .dot .dotactive {
     background: #1d1e64;
   }
   .dot span {
@@ -79,13 +79,12 @@ div {
     border-radius: 10px;
     border: 1px solid #ccc;
   }
-  input[type="text"]{
+  input[type="password"] {
     width: 430px;
     padding: 12px;
     margin-top: 5px;
     border-radius: 10px;
     border: 1px solid #ccc;
-    margin-bottom: 3px;
   }
   .loginbutton {
     width: 455px;
@@ -109,20 +108,4 @@ div {
     background-color: #616177;
     color: white;
     border: none;
-    cursor:pointer;
-}
-.alreadyhave{
-    margin-top: 10px;
-    font-size: 15px;
-    text-align: center;
-    border: none;
-    background-color: white;
-    color: #616177;
-    margin-left: 290px;
-    ;
-}
-
-.alreadyhave:hover {
-  cursor: pointer;
-  text-decoration: underline;
 }
