--- a/css/signupID.css
+++ b/css/signupID.css
@@ -83,6 +83,7 @@ div {
     width: 430px;
     padding: 12px;
     margin-top: 5px;
+    margin-bottom: 5px;
     border-radius: 10px;
     border: 1px solid #ccc;
   }
@@ -94,7 +95,7 @@ div {
     border: none;
     border-radius: 12px;
     font-size: 15px;
-    margin-top: 10px;
+    margin-top: 7px;
     cursor: pointer;
     border: 1px solid #ccc;
   }
@@ -108,4 +109,17 @@ div {
     background-color: #616177;
     color: white;
     border: none;
+}
+.alreadyhave{
+    margin-top: 10px;
+    font-size: 15px;
+    text-align: center;
+    background-color: white;
+    color: #616177;
+    margin: 0 center;
+    border:none;
+}
+.alreadyhave:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
