--- a/css/signupPW.css
+++ b/css/signupPW.css
@@ -86,7 +86,7 @@ div {
     border: 1px solid #ccc;
     margin-bottom: 10px;
   }
-  .loginbutton {
+  .gogonext {
     width: 455px;
     padding: 14px;
     background: #1d1e64;
