feat: 게시물 카드 grid에서 flex로 변경
find, found, mypost에서 post-card를 정렬할 때 기존의 grid 방식에서 flex 방식으로 변경하여 적용

--- a/css/find.css
+++ b/css/find.css
@@ -160,10 +160,10 @@ main {
 
 .card-container {
     width: 1002px;
-    display: grid;
-        grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: minmax(100px, auto);
+    display: flex;
+    flex-wrap: wrap;
     gap: 16px 18px;
+    justify-content: flex-start;
 }
 
 .filter-section {
