--- a/css/intro.css
+++ b/css/intro.css
@@ -26,6 +26,7 @@ header {
     width: 100%;
     height: 80px;
     background-color: white;
+    border-bottom: 1px solid #C0C0C0;
     padding: 0 20px;
 }
 
