--- a/css/intro.css
+++ b/css/intro.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+    overflow: hidden;
 }
 
 /* -------------header------------- */
